--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
-body {
-    background-color: rgb(54, 51, 51);
+* {
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#homemenu ul{
+    list-style: none;
+    padding:0;
+    background-color: rgb(2, 2, 2);
+}
+
+#homemenu ul li {
+    display:inline ;
+}
+
+#homemenu ul li a  {
+    
+    color: aqua; 
+    padding: 40px ;
+    display: inline-block;
+    text-decoration: none;
+    transition: background .4s;
+}
+#homemenu ul li a:hover {
+    background-color: rgb(125, 125, 143)
 }
